--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
-		<spring-version>4.0.2.RELEASE</spring-version>
+		<spring-version>4.2.4.RELEASE</spring-version>
 		<org.springframework.security-version>3.2.1.RELEASE</org.springframework.security-version>
 	</properties>
 
@@ -39,6 +39,16 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
 			<version>${org.springframework.security-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>1.7.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
